Feat (frontend-config) 'PP-007': Enhance forms with validations, add confirm password field, improve accessibility, and adjust branding/logo styles
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -1,6 +1,6 @@
 <section class="flex flex-row min-h-screen" id="login">
 
-  <auth-branding class="flex-1" contentAlign="left" />
+  <auth-branding class="flex-1 hidden md:block" contentAlign="left" />
 
   <div id="form">
     <div class="form-wrapper">
@@ -10,11 +10,11 @@
       </div>
 
       <!--   FORM START   -->
-      <form id="login-form">
+      <form (submit)="submitLoginForm($event)" id="login-form">
 
         <div class="input-field">
           <label for="email">Email:</label>
-          <input [formField]="loginForm.email" class="bg-alternate-background focus:outline-primary" id="email" placeholder="Email Address" type="email" />
+          <input [formField]="loginForm.email" autocomplete="email" class="bg-alternate-background focus:outline-primary" id="email" placeholder="Email Address" type="email" />
 
           @if (loginForm.email().invalid() && loginForm.email().touched()){
             <div class="input-field-errors-wrapper">
@@ -27,7 +27,7 @@
 
         <div class="input-field">
           <label for="password">Password:</label>
-          <input [formField]="loginForm.password" class="bg-alternate-background focus:outline-primary" id="password" placeholder="Password" type="password" />
+          <input [formField]="loginForm.password" autocomplete="current-password" class="bg-alternate-background focus:outline-primary" id="password" placeholder="Password" type="password" />
 
           @if (loginForm.password().invalid() && loginForm.password().touched()){
             <div class="input-field-errors-wrapper">
