Feat (frontend-config) 'PP-007': Add slide animations, refine form styles, and update branding alignment on auth pages
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -1,8 +1,8 @@
 <section class="flex flex-row min-h-screen" id="login">
 
-  <auth-branding class="flex-1 hidden md:block" contentAlign="left" />
+  <auth-branding class="flex-1 hidden md:block animate-left" contentAlign="left" />
 
-  <div id="form">
+  <div class="animate-right flex-1" id="form">
     <div class="form-wrapper">
       <div class="space-y-4">
         <h3>Welcome back,</h3>
