--- a/frontend/web/src/app/pages/auth/register/register.html
+++ b/frontend/web/src/app/pages/auth/register/register.html
@@ -1,6 +1,6 @@
 <section class="flex flex-row min-h-screen" id="register">
 
-  <div id="form">
+  <div class="animate-left flex-1" id="form">
     <div class="form-wrapper">
       <div class="space-y-4">
         <h3>Hello there,</h3>
@@ -12,7 +12,7 @@
 
         <div class="input-field">
           <label for="email">Email:</label>
-          <input [formField]="registerForm.email" autocomplete="email" class="bg-alternate-background focus:outline-primary" id="email" placeholder="Email Address" type="email" />
+          <input [formField]="registerForm.email" autocomplete="email" id="email" placeholder="Email Address" type="email" />
 
           @if (registerForm.email().invalid() && registerForm.email().touched()){
             <div class="input-field-errors-wrapper">
@@ -25,7 +25,7 @@
 
         <div class="input-field">
           <label for="username">Username:</label>
-          <input [formField]="registerForm.username" autocomplete="username" class="bg-alternate-background focus:outline-primary" id="username" placeholder="Username" type="text" />
+          <input [formField]="registerForm.username" autocomplete="username" id="username" placeholder="Username" type="text" />
 
           @if (registerForm.username().invalid() && registerForm.username().touched()){
             <div class="input-field-errors-wrapper">
@@ -38,7 +38,7 @@
 
         <div class="input-field">
           <label for="password">Password:</label>
-          <input [formField]="registerForm.password" autocomplete="new-password" class="bg-alternate-background focus:outline-primary" id="password" placeholder="Password" type="password" />
+          <input [formField]="registerForm.password" autocomplete="new-password" id="password" placeholder="Password" type="password" />
 
           @if (registerForm.password().invalid() && registerForm.password().touched()){
             <div class="input-field-errors-wrapper">
@@ -51,7 +51,7 @@
 
         <div class="input-field">
           <label for="password">Confirm Password:</label>
-          <input [formField]="registerForm.confirmPassword" autocomplete="new-password" class="bg-alternate-background focus:outline-primary" id="confirm_password" placeholder="Confirm Password" type="password" />
+          <input [formField]="registerForm.confirmPassword" autocomplete="new-password" id="confirm_password" placeholder="Confirm Password" type="password" />
 
           @if (registerForm.confirmPassword().invalid() && registerForm.confirmPassword().touched()){
             <div class="input-field-errors-wrapper">
@@ -62,24 +62,24 @@
           }
         </div>
 
-        <button [disabled]="registerForm().invalid()" class="bg-primary text-inverted-text shadow-primary disabled:bg-primary/50" type="submit">
+        <button [disabled]="registerForm().invalid()" type="submit">
           Register
         </button>
 
       </form>
       <!--   FORM END   -->
 
-      <p (click)="routeToLogin()" class="to-register-text text-muted hover:text-primary">Already have an account? Log in</p>
+      <p (click)="routeToLogin()" class="form-redirect-text">Already have an account? Log in</p>
 
       <div class="flex flex-row items-center gap-6 w-full text-sm my-10">
-        <hr class="border-muted"/>
+        <hr />
         <p class="text-muted capitalize">Secure Registration</p>
-        <hr class="border-muted"/>
+        <hr />
       </div>
 
     </div>
   </div>
 
-  <auth-branding class="flex-1 hidden md:block" contentAlign="right" />
+  <auth-branding class="flex-1 hidden md:block animate-right" contentAlign="right" />
 
 </section>
