Ref (frontend-config) 'PP-007': Add `CheckedShield` icon, rename `CircleCheck` to `CheckedCircle`, update imports, and integrate new icons into `login`.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="bordered-card">
-        <icon-warning [size]="20"/>
+        <icon-checked-shield/>
 
         <div class="space-y-2">
           <p>Protected by two-factor authentication!</p>
