Ref (frontend-services) 'PP-010': Fixed up the styles to check different themes

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -38,7 +38,7 @@
           }
         </div>
 
-        <button [disabled]="loginForm().invalid()" class="" type="submit">
+        <button [disabled]="loginForm().invalid()" type="submit">
           Log In
         </button>
 
