--- a/frontend/web/src/app/components/ui/atoms/toast/toast.css
+++ b/frontend/web/src/app/components/ui/atoms/toast/toast.css
@@ -1,47 +1,43 @@
-@reference "tailwindcss";
+@reference 'tailwindcss';
 
 .toast {
-  @apply bg-[--alternate-background] text-[--primary-text];
+  @apply bg-[var(--inverted-background)] text-[var(--primary-text)];
   width: 360px;
   cursor: default;
   overflow: hidden;
   border-radius: 12px;
-  will-change: transform, opacity;
+  will-change: transform;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
 }
 
 .content {
+  gap: 2rem;
   display: flex;
+  padding: 0.8rem;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 12px 14px;
-  gap: 12px;
 }
 
 .text {
-  gap: 2px;
+  gap: 4px;
   display: flex;
   cursor: default;
   flex-direction: column;
 }
 
 .title {
-  font-weight: 600;
-  font-size: 0.95rem;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .message {
-  font-size: 0.875rem;
-  opacity: 0.9;
+  @apply p-1;
+  font-size: 0.8rem;
 }
 
 .close {
-  background: transparent;
-  border: none;
-  color: white;
-  cursor: pointer;
   opacity: 0.7;
-  font-size: 16px;
+  cursor: pointer;
 }
 
 .progress {
