--- a/frontend/web/src/styles.css
+++ b/frontend/web/src/styles.css
@@ -227,7 +227,7 @@ main {
     }
 
     button {
-      @apply bg-primary text-primary-text shadow-primary disabled:bg-primary/50 cursor-pointer w-full rounded-lg px-4 py-2 shadow disabled:shadow-none disabled:cursor-not-allowed enabled:hover:scale-101 duration-300 ease-in-out;
+      @apply bg-primary text-black shadow-primary disabled:bg-primary/50 cursor-pointer w-full rounded-lg px-4 py-2 shadow disabled:shadow-none disabled:cursor-not-allowed enabled:hover:scale-101 duration-300 ease-in-out;
     }
   }
 }
@@ -244,7 +244,7 @@ main {
   }
 
   .bordered-card {
-    @apply text-xs flex flex-row items-start gap-3 border rounded-lg p-6 w-full border-primary;
+    @apply text-xs flex flex-row items-start gap-3 border rounded-lg p-6 w-full border-primary pointer-events-none;
   }
 
   /* ANIMATIONS START */
