Ref (frontend-services) 'PP-010': Moved the auth styles to the global css file

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -56,7 +56,7 @@
         Don't have an account? Sign Up
       </p>
 
-      <div class="pointer-events-none flex flex-row items-center gap-6 w-full text-sm my-10">
+      <div class="secure-auth">
         <hr />
         <p class="text-muted capitalize">Secure Login</p>
         <hr />
