--- a/frontend/web/src/app/pages/auth/register/register.html
+++ b/frontend/web/src/app/pages/auth/register/register.html
@@ -30,16 +30,16 @@
         <div class="input-field">
           <label for="username">Username:</label>
           <input
-            [formField]="registerForm.username"
+            [formField]="registerForm.name"
             autocomplete="username"
             id="username"
             placeholder="Username"
             type="text"
           />
 
-          @if (registerForm.username().invalid() && registerForm.username().touched()) {
+          @if (registerForm.name().invalid() && registerForm.name().touched()) {
             <div class="input-field-errors-wrapper">
-              @for (error of registerForm.username().errors(); track error.kind) {
+              @for (error of registerForm.name().errors(); track error.kind) {
                 <p class="input-field-error">{{ error.message }}</p>
               }
             </div>
