Feat (frontend) 'PP-003': Fixed the button atom component and added loading state

--- a/frontend/web/src/app/pages/auth/login/login.html
+++ b/frontend/web/src/app/pages/auth/login/login.html
@@ -48,7 +48,13 @@
           }
         </div>
 
-        <button [disabled]="loginForm().invalid()" type="submit">Log In</button>
+        <atom-button
+          id="login"
+          type="submit"
+          label="Log In"
+          [isLoading]="isSubmitting()"
+          [disabled]="loginForm().invalid() || isSubmitting()"
+        />
       </form>
       <!--   FORM END   -->
 
