Ref (frontend-services) 'PP-003': Implemented the new button component in the login and register forms

--- a/frontend/web/src/app/pages/auth/register/register.html
+++ b/frontend/web/src/app/pages/auth/register/register.html
@@ -86,7 +86,13 @@
           }
         </div>
 
-        <button [disabled]="registerForm().invalid()" type="submit">Register</button>
+        <atom-button
+          id="register"
+          type="submit"
+          label="Register"
+          [isLoading]="isSubmitting()"
+          [disabled]="registerForm().invalid() || isSubmitting()"
+        />
       </form>
       <!--   FORM END   -->
 
