Feat (server) 'PP-011': Added users route to get all users in the database

--- a/frontend/web/src/app/pages/home/home.html
+++ b/frontend/web/src/app/pages/home/home.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<section id="home" class="h-screen flex flex-row">
+  <div class="flex-1 bg-red-600"></div>
+
+  <div class="flex-1">
+    <router-outlet></router-outlet>
+  </div>
+</section>
