Feat (frontend) 'PP-011': Created the layout for auth and main. Fixed app routes

--- a/frontend/web/src/app/pages/home/home.html
+++ b/frontend/web/src/app/pages/home/home.html
@@ -1,7 +1,5 @@
-<section id="home" class="h-screen flex flex-row">
-  <div class="flex-1 bg-red-600"></div>
-
-  <div class="flex-1">
-    <router-outlet></router-outlet>
-  </div>
+<section id="home">
+    <div>
+        <p>This is the homepage</p>
+    </div>
 </section>
