Feat (frontend) 'PP-011': Added the application logo in the app-header

--- a/frontend/web/src/app/components/layouts/headers/app-header/app-header.html
+++ b/frontend/web/src/app/components/layouts/headers/app-header/app-header.html
@@ -1,3 +1,3 @@
 <header>
-  <p>Header</p>
+  <img alt="app-logo" class="px-10" height="140" ngSrc="/images/branding/logo.png" width="140" />
 </header>
