Feat (frontend) 'PP-011': Migrated the logo size and image path to the component file

--- a/frontend/web/src/app/components/layouts/headers/app-header/app-header.html
+++ b/frontend/web/src/app/components/layouts/headers/app-header/app-header.html
@@ -1,3 +1,3 @@
 <header>
-  <img alt="app-logo" class="px-10" height="140" ngSrc="/images/branding/logo.png" width="140" />
+  <img class="px-10" alt="app-logo" [ngSrc]="logoPath" [width]="logoSize" [height]="logoSize" />
 </header>
