--- a/frontend/web/src/app/components/layouts/headers/auth-header/auth-header.html
+++ b/frontend/web/src/app/components/layouts/headers/auth-header/auth-header.html
@@ -1,8 +1,9 @@
 <header class="h-[20vh] bg-transparent">
-    <img
-      alt="app-logo"
-      class="px-10"
-      height="50"
-      ngSrc="/images/branding/logo.png"
-      width="50" />
+  <img
+    class="px-10"
+    alt="app-logo"
+    [ngSrc]="logoPath"
+    [width]="logoSize"
+    [height]="logoSize"
+  />
 </header>
