--- a/frontend/web/src/app/components/layouts/headers/app-header/app-header.html
+++ b/frontend/web/src/app/components/layouts/headers/app-header/app-header.html
@@ -1,3 +1,9 @@
 <header>
-  <img class="px-10" alt="app-logo" [ngSrc]="logoPath" [width]="logoSize" [height]="logoSize" />
+  <img
+    class="px-10"
+    alt="app-logo"
+    [ngSrc]="logoPath"
+    [width]="logoSize"
+    [height]="logoSize"
+  />
 </header>
